--- a/package.json
+++ b/package.json
@@ -24,10 +24,6 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@auth0/auth0-react": "^2.2.4",
-    "@dnd-kit/core": "^6.1.0",
-    "@dnd-kit/sortable": "^8.0.0",
-    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -36,13 +32,6 @@
     "@fontsource/inter": "^5.0.18",
     "@fontsource/nunito-sans": "^5.0.13",
     "@fontsource/public-sans": "^5.0.18",
-    "@fullcalendar/core": "^6.1.14",
-    "@fullcalendar/daygrid": "^6.1.14",
-    "@fullcalendar/interaction": "^6.1.14",
-    "@fullcalendar/list": "^6.1.14",
-    "@fullcalendar/react": "^6.1.14",
-    "@fullcalendar/timegrid": "^6.1.14",
-    "@fullcalendar/timeline": "^6.1.14",
     "@hookform/resolvers": "^3.6.0",
     "@iconify/react": "^5.0.1",
     "@mui/lab": "^5.0.0-alpha.170",
@@ -50,62 +39,24 @@
     "@mui/material-nextjs": "^5.15.11",
     "@mui/x-data-grid": "^7.7.0",
     "@mui/x-date-pickers": "^7.7.0",
-    "@mui/x-tree-view": "^7.7.0",
-    "@react-pdf/renderer": "^3.4.4",
+    "@mui/x-tree-view": "^7.15.0",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.43.4",
-    "@tiptap/core": "^2.4.0",
-    "@tiptap/extension-code-block": "^2.4.0",
-    "@tiptap/extension-code-block-lowlight": "^2.4.0",
-    "@tiptap/extension-image": "^2.4.0",
-    "@tiptap/extension-link": "^2.4.0",
-    "@tiptap/extension-placeholder": "^2.4.0",
-    "@tiptap/extension-text-align": "^2.4.0",
-    "@tiptap/pm": "^2.4.0",
-    "@tiptap/react": "^2.4.0",
-    "@tiptap/starter-kit": "^2.4.0",
-    "apexcharts": "^3.49.1",
     "autosuggest-highlight": "^3.3.4",
-    "aws-amplify": "^6.3.6",
-    "axios": "^1.7.2",
     "dayjs": "^1.11.11",
-    "embla-carousel": "^8.1.5",
-    "embla-carousel-auto-height": "^8.1.5",
-    "embla-carousel-auto-scroll": "^8.1.5",
-    "embla-carousel-autoplay": "^8.1.5",
-    "embla-carousel-react": "^8.1.5",
-    "firebase": "^10.12.2",
     "framer-motion": "^11.2.10",
     "i18next": "^23.11.5",
-    "i18next-browser-languagedetector": "^8.0.0",
-    "i18next-resources-to-backend": "^1.2.1",
-    "lowlight": "^3.1.0",
-    "mapbox-gl": "^3.4.0",
-    "mui-one-time-password-input": "^2.0.2",
     "next": "^14.2.4",
     "nprogress": "^0.2.0",
     "openai": "^4.57.0",
     "react": "^18.3.1",
-    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
-    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.5",
     "react-i18next": "^14.1.2",
-    "react-joyride": "^2.8.2",
-    "react-lazy-load-image-component": "^1.6.0",
-    "react-map-gl": "^7.1.7",
-    "react-markdown": "^9.0.1",
-    "react-organizational-chart": "^2.2.1",
-    "react-phone-number-input": "^3.4.3",
-    "rehype-highlight": "^7.0.0",
-    "rehype-raw": "^7.0.0",
-    "remark-gfm": "^4.0.0",
     "simplebar-react": "^3.2.5",
     "sonner": "^1.5.0",
     "stylis": "^4.3.2",
     "stylis-plugin-rtl": "^2.1.1",
-    "swr": "^2.2.5",
-    "turndown": "^7.2.0",
     "yet-another-react-lightbox": "^3.20.0",
     "zod": "^3.23.8"
   },
@@ -115,6 +66,7 @@
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@types/autosuggest-highlight": "^3.2.3",
+    "@types/jest": "^29.5.12",
     "@types/mapbox-gl": "^3.1.0",
     "@types/node": "^20.14.2",
     "@types/nprogress": "^0.2.3",
