--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "esnext",
       "dom.iterable",
     ],
+    "types": ["jest", "node"],
     "strict": true,
     "noEmit": true,
     "allowJs": true,
